--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "leaflet": "^1.6.0",
     "react": "^16.13.0",
     "react-animated-number": "^0.4.4",
     "react-dom": "^16.13.0",
+    "react-leaflet": "^2.6.3",
     "react-scripts": "3.4.0"
   },
   "scripts": {
